# android-jna-example

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zlargon/hello/example/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zlargon/hello/example/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zlargon/hello/example/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
hellosdk/: .gitignore  build.gradle  proguard-rules.pro
hellosdk/src/androidTest/java/com/zlargon/hello/hellosdk/: ExampleInstrumentedTest.java
hellosdk/src/main/: AndroidManifest.xml
hellosdk/src/main/java/com/zlargon/hello/hellosdk/: HelloNative.java  HelloSDK.java
hellosdk/src/main/res/values/: strings.xml
hellosdk/src/test/java/com/zlargon/hello/hellosdk/: ExampleUnitTest.java
libhello/: CMakeLists.txt  build-android-shared-from-static.sh  build-android-shared.sh  hello.c  hello.h
